--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.data.mongodb.database=ProjectOnboardingDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+
 springdoc.swagger-ui.path=/swagger-custom-ui.html
