--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,36 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+				<configuration>
+					<excludes>
+						<exclude>com/project/onboarding/*Application.java</exclude>
+						<exclude>com/project/onboarding/constants/*</exclude>
+						<exclude>com/project/onboarding/exception/*</exclude>
+						<exclude>com/project/onboarding/model/*</exclude>
+						<exclude>com/project/onboarding/**/*Tests.java</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
