--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
 springdoc.swagger-ui.path=/swagger-custom-ui.html
+
+logging.file.name=mylog.log
+logging.pattern.file=%d [%level]   %m%n
