--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
@@ -76,7 +81,6 @@
 				<version>0.8.6</version>
 				<configuration>
 					<excludes>
-						<exclude>com/project/onboarding/*Application.java</exclude>
 						<exclude>com/project/onboarding/constants/*</exclude>
 						<exclude>com/project/onboarding/exception/*</exclude>
 						<exclude>com/project/onboarding/model/*</exclude>
