--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.data.mongodb.database=ProjectOnboardingDB
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+server.port=8090
 springdoc.swagger-ui.path=/swagger-custom-ui.html
+logging.file.name=mylog.log
+logging.pattern.file=%d [%level] %m%n
