api for project and resource list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 springdoc.swagger-ui.path=/swagger-custom-ui.html
+
+spring.data.mongodb.database=OnboardingDb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+
+logging.file.name=statuslog
+logging.level.com.project.onboarding=info
